base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus-ingress
  namespace: nexus
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100m
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - docker.apps.cluster-cjq7m.cjq7m.sandbox1718.opentlc.com.com
    - nexus.apps.cluster-cjq7m.cjq7m.sandbox1718.opentlc.com.com 
    secretName: nexus-tls
  rules:
  - host: nexus.apps.cluster-cjq7m.cjq7m.sandbox1718.opentlc.com.com 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nexus-service
            port: 
              number: 80
  - host: docker.apps.cluster-cjq7m.cjq7m.sandbox1718.opentlc.com.com 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nexus-service
            port: 
              number: 5000
